# redis-like-kv-store

./: .dockerignore  .env.example  .gitignore  BEFORE_AFTER.md  CRITICAL_FIXES_SUMMARY.md  DEPLOYMENT.md  DESIGN.md  Dockerfile  ELITE_FEATURES_COMPLETE.md  FIXES_APPLIED.md  IMPLEMENTATION_SUMMARY.md  PRODUCTION_README.md  QUICK_START.md  README.md  docker-compose.yml  pyproject.toml  redislite.py  requirements.txt  run.py  test_api.py  vercel.json
api/: client.py  config.py  hashmap_engine.py  index.py  memory_tracker.py  metrics.py  persistence.py  redislite.py  replication.py  replication_psync.py  shutdown_handler.py  slowlog.py  storage_engine.py  tcp_server.py
benchmarks/: benchmark.py
docs/: ARCHITECTURE.md  ENGINEERING_TRADEOFFS.md  FAILURE_MODES.md  WRITE_PATH_ANALYSIS.md
tests/: clock_chaos_test.py  crash_test.py  fuzz_test_resp.py
tools/: live_monitor.py
